--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="page">
         <h2 class="page__title">random title</h2>
-        <p class="page__descriptiom">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, voluptatibus.</p>
+        <p class="page__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, voluptatibus.</p>
     </section>
 </body>
 </html>
